refactor: consolidar configuração de email e remover redundâncias
- Remove classe ConfigManager duplicada do config.py
- Adiciona métodos de leitura de arquivo JSON .env ao EmailConfig
- Implementa busca inteligente em múltiplos caminhos para email_config.env
- Adiciona métodos salvar(), carregar() e limpar() ao EmailConfig
- Atualiza email_service.py para usar EmailConfig.carregar()
- Adiciona email_config.env ao .gitignore para proteger credenciais
- Implementa fallback para variáveis de ambiente do sistema
- Adiciona suporte a caminhos alternativos configuráveis
- Melhora feedback com mensagens ✓/⚠/✗ para o usuário

BREAKING CHANGES:
- ConfigManager.carregar_config_email() → EmailConfig.carregar()
- ConfigManager.salvar_config_email(config) → config.salvar()
- ConfigManager.limpar_config_email() → EmailConfig.limpar()

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
+# Configurações sensíveis do projeto
+email_config.env
+
+# Arquivos desnecessários
+commit.txt
+new.txt
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
