feat(config): Adiciona suporte para múltiplos destinatários de email

--- a/email_config.env.example
+++ b/email_config.env.example
@@ -19,6 +19,7 @@
  *   Para Gmail: use uma "Senha de app" gerada em https://myaccount.google.com/apppasswords
  *   Para outros provedores: consulte a documentação do seu provedor de email
  * - email_remetente: Email que aparecerá como remetente das notificações
+ * - email_destinatarios: 
  * - usar_tls: Usar TLS para conexão segura (true ou false)
  */
 
@@ -28,5 +29,8 @@
     "smtp_user": "seu-email@exemplo.com",
     "smtp_password": "sua-senha-ou-senha-de-app",
     "email_remetente": "seu-email@exemplo.com",
+    "email_destinatarios": [
+        "email-do-destinatario@exemplo.com",
+    ],
     "usar_tls": true
 } 
